Geoip database readers update
Signed-off-by: Asif Sohail Mohammed <nsifmoh@amazon.com>