@@ -7,7 +7,6 @@ package org.opensearch.dataprepper.plugins.processor.utils;
 
 import org.opensearch.dataprepper.plugins.processor.extension.databasedownload.DBSourceOptions;
 
-import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -18,24 +17,41 @@ import java.util.regex.Pattern;
 /**
  * Implementation of class for checking whether URL type is S3 or file path
  */
-public class DatabaseSourceIdentification {
+public class DbSourceIdentification {
 
-    private DatabaseSourceIdentification() {
+    private DbSourceIdentification() {
 
     }
 
-    private static final String S3_DOMAIN_PATTERN = "[a-zA-Z0-9-]+\\.s3\\.amazonaws\\.com";
-    private static final String MANIFEST_ENDPOINT_PATH = "manifest.json";
+    private static String s3DomainPattern = "[a-zA-Z0-9-]+\\.s3\\.amazonaws\\.com";
+    private static String CDN_ENDPOINT_HOST = "devo.geoip.maps.opensearch.org";
 
     /**
      * Check for database path is valid S3 URI or not
      * @param uriString uriString
      * @return boolean
      */
-    public static boolean isS3Uri(final String uriString) {
+    public static boolean isS3Uri(String uriString) {
         try {
             URI uri = new URI(uriString);
             if (uri.getScheme() != null && uri.getScheme().equalsIgnoreCase("s3")) {
+                return true;
+            }
+        } catch (Exception e) {
+            return false;
+        }
+        return false;
+    }
+
+    /**
+     * Check for database path is valid S3 URL or not
+     * @param urlString urlString
+     * @return boolean
+     */
+    public static boolean isS3Url(String urlString) {
+        try {
+            URL url = new URL(urlString);
+            if (Pattern.matches(s3DomainPattern, url.getHost())) {
                 return true;
             }
         } catch (Exception e) {
@@ -49,14 +65,11 @@ public class DatabaseSourceIdentification {
      * @param input input
      * @return boolean
      */
-    public static boolean isURL(final String input) {
+    public static boolean isURL(String input) {
         try {
-            final URI uri = new URI(input);
-            final URL url = new URL(input);
-            return !input.endsWith(MANIFEST_ENDPOINT_PATH) &&
-                    uri.getScheme() != null &&
-                    !Pattern.matches(S3_DOMAIN_PATTERN, url.getHost()) &&
-                    (uri.getScheme().equals("http") || uri.getScheme().equals("https"));
+            URI uri = new URI(input);
+            URL url = new URL(input);
+            return uri.getScheme() != null && !Pattern.matches(s3DomainPattern, url.getHost()) &&(uri.getScheme().equals("http") || uri.getScheme().equals("https"));
         } catch (URISyntaxException | MalformedURLException e) {
             return false;
         }
@@ -67,26 +80,17 @@ public class DatabaseSourceIdentification {
      * @param input input
      * @return boolean
      */
-    public static boolean isFilePath(final String input) {
-        final File file = new File(input);
-        return file.exists() && file.isDirectory();
+    public static boolean isFilePath(String input) {
+        return input.startsWith("/") || input.startsWith("./") || input.startsWith("\\") || (input.length() > 1 && input.charAt(1) == ':');
     }
 
-    /**
-     * Check for database path is CDN endpoint
-     * @param input input
-     * @return boolean
-     */
     public static boolean isCDNEndpoint(final String input) {
-        if (input.endsWith(MANIFEST_ENDPOINT_PATH)) {
-            try {
-                final URI uri = new URI(input);
-                return uri.getScheme().equals("http") || uri.getScheme().equals("https");
-            } catch (final URISyntaxException e) {
-                return false;
-            }
+        try {
+            final URI uri = new URI(input);
+            return uri.getHost().equals(CDN_ENDPOINT_HOST);
+        } catch (URISyntaxException e) {
+            return false;
         }
-        return false;
     }
 
     /**
@@ -94,21 +98,21 @@ public class DatabaseSourceIdentification {
      * @param databasePaths - List of database paths to get databases data from
      * @return DBSourceOptions
      */
-    public static DBSourceOptions getDatabasePathType(final List<String> databasePaths) {
+    public static DBSourceOptions getDatabasePathType(List<String> databasePaths) {
         DBSourceOptions downloadSourceOptions = null;
         for(final String databasePath : databasePaths) {
 
-            if(DatabaseSourceIdentification.isFilePath(databasePath)) {
+            if(DbSourceIdentification.isFilePath(databasePath)) {
                 return DBSourceOptions.PATH;
             }
-            else if (DatabaseSourceIdentification.isCDNEndpoint(databasePath)) {
-                downloadSourceOptions = DBSourceOptions.HTTP_MANIFEST;
+            else if (DbSourceIdentification.isCDNEndpoint(databasePath)) {
+                downloadSourceOptions = DBSourceOptions.CDN;
             }
-            else if(DatabaseSourceIdentification.isURL(databasePath))
+            else if(DbSourceIdentification.isURL(databasePath))
             {
                 downloadSourceOptions = DBSourceOptions.URL;
             }
-            else if(DatabaseSourceIdentification.isS3Uri(databasePath))
+            else if(DbSourceIdentification.isS3Uri(databasePath) || (DbSourceIdentification.isS3Url(databasePath)))
             {
                 downloadSourceOptions = DBSourceOptions.S3;
             }
